--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -16,6 +16,10 @@ html, body {
   margin-top: 80px;
 }
 
+.mt-100 {
+  margin-top: 100px;
+}
+
 .heading_72,
 .heading_48,
 .heading_42,
@@ -85,6 +89,26 @@ html, body {
   letter-spacing: 0.4px;
 }
 
+.bg-1 {
+  background-color: #00234D;
+}
+
+.bg-2 {
+  background-color: #000;
+}
+
+.bg-3 {
+  background-color: #F76B6A;
+}
+
+.bg-4 {
+  background-color: #071C1F;
+}
+
+.bg-5 {
+  background-color: #FBF3F0;
+}
+
 .bg-services-1 {
   background-color: #FCEDDA;
 }
@@ -103,8 +127,34 @@ html, body {
   color: #000;
 }
 
-.top-header {
-  background-color: #071C1F;
+.icon {
+  width: 22px;
+  height: 22px;
+}
+
+a:hover {
+  text-decoration: none !important;
+}
+
+.btn-1 {
+  color: #fff;
+  background-color: #F76B6A;
+  border: #F76B6A;
+  padding: 10px 17px;
+}
+
+.btn-1:hover {
+  color: #F76B6A;
+  background-color: #9c4343;
+  text-decoration: none;
+}
+
+.sticky-header {
+  position: sticky;
+  top: 0px;
+  z-index: 99;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
 }
 
 header .main-menu {
@@ -170,6 +220,45 @@ header .icon {
   font-size: 1.8rem;
   margin-left: 20px;
 }
+header .cart-info {
+  display: none;
+  position: absolute;
+  bottom: -230px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #fff;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  z-index: 99;
+  opacity: 0;
+}
+header .cart-info.show {
+  display: block;
+  opacity: 1;
+}
+header .cart-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+header .cart-item-image {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+header .cart-item-name {
+  font-weight: bold;
+}
+header .cart-item-price {
+  margin-left: auto;
+}
+header .cart-btn {
+  padding: 17px 0 20px;
+  border: none;
+  outline: none;
+  flex: 0 0 40px;
+}
 header .search-wrapper {
   max-height: 0;
   overflow: hidden;
@@ -202,6 +291,11 @@ header .search-form .search-ipunt input {
   border: none;
   outline: none;
   font-size: 14px;
+}
+header .header-logo a {
+  font-size: 30px;
+  font-weight: 600;
+  color: #000;
 }
 
 .carousel {
@@ -504,4 +598,539 @@ header .search-form .search-ipunt input {
 
 .services-content {
   padding-left: 24px;
+}
+
+.footer-top {
+  padding: 95px 0 100px;
+}
+
+.footer-bottom-inner {
+  margin-top: -25px;
+}
+
+.footer-widget-wrapper {
+  margin-top: -40px;
+}
+
+.footer-widget {
+  margin-top: 40px;
+}
+
+.footer-heading {
+  margin: 0 0 32px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.5;
+  color: #FEFEFE;
+}
+.footer-style-2 .footer-heading {
+  color: #00234D;
+}
+
+.footer-menu-item a {
+  display: block;
+  padding-top: 10px;
+}
+
+.footer-menu-item a,
+.footer-text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: 0.5px;
+  color: #FEFEFE;
+  opacity: 0.7;
+  text-decoration: none !important;
+}
+.footer-style-2 .footer-menu-item a,
+.footer-style-2 .footer-text {
+  color: #00234D;
+}
+
+.footer-logo {
+  font-size: 30px;
+  color: #FEFEFE;
+}
+
+.footer-newsletter-form {
+  width: 100%;
+  height: 54px;
+  overflow: hidden;
+}
+
+.footer-newsletter-input {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.64;
+  letter-spacing: 0.25px;
+  color: #FEFEFE;
+  opacity: 0.7;
+  height: inherit;
+  width: 100%;
+  padding: 0 15px;
+  outline: none !important;
+  box-shadow: none !important;
+  border: 1px solid #FEFEFE;
+  border-radius: 12px 0 0 12px;
+}
+.footer-style-2 .footer-newsletter-input {
+  color: #00234D;
+  border-color: #00234D;
+}
+
+.footer-newsletter-btn {
+  width: 117px;
+  min-width: 117px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.2;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #00234D;
+  color: #fff;
+  height: inherit;
+  border-radius: 0 12px 12px 0;
+}
+
+.newsletter-btn-white {
+  background-color: #fff;
+  color: #071C1F;
+}
+
+.footer-social-item {
+  margin-top: 12px;
+  margin-left: 25px;
+}
+
+.footer-social-item {
+  margin-top: 12px;
+  margin-left: 25px;
+}
+
+.footer-social {
+  margin-top: -12px;
+  margin-left: -25px;
+}
+
+.footer-social-wrapper {
+  margin-top: 37px;
+}
+
+.footer-top {
+  padding: 95px 0 100px;
+}
+
+.footer-bottom-menu {
+  margin-left: -32px;
+  margin-top: 15px;
+}
+.footer-bottom-menu > li {
+  margin-left: 32px;
+}
+
+.footer-social-item a {
+  font-size: 25px;
+  color: #FEFEFE;
+}
+
+.footer-bottom {
+  border-top: 1px solid rgba(255, 255, 255, 0.4);
+  padding: 20px 0;
+}
+.footer-style-2 .footer-bottom {
+  border-top: 1px solid rgba(0, 35, 77, 0.1);
+}
+
+.copyright {
+  margin-top: 25px;
+}
+
+.subtotal-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 12px;
+}
+
+.cart-total-box {
+  background: rgb(246, 246, 249);
+  border-radius: 4px;
+  padding: 32px;
+}
+
+.shipping_text, .subtotal-value, .subtotal-title {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.69;
+  letter-spacing: 0.5px;
+  color: rgb(0, 0, 0);
+  margin-bottom: 0px;
+}
+
+.cart-left-middle-product-quantity {
+  display: flex;
+  align-items: center;
+}
+
+.cart-left-middle-product-quantity-content {
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.cart-left-middle-product-quantity-content-number {
+  width: 50px;
+  text-align: center;
+}
+
+.btnUpdate {
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 3px;
+  background-color: #ccc;
+}
+
+.btnUpdate i {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.product-left-category {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  z-index: 1;
+}
+
+.product-left-category .product-left-category-item {
+  margin-bottom: 30px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  width: 100%;
+  max-height: 300px;
+  overflow: hidden;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 18px;
+  text-align: center;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-title h2 {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-title span {
+  cursor: pointer;
+  color: #888;
+  font-size: 12px;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-title span:hover {
+  color: #ccc;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  padding: 0 20px;
+  height: 100%;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content hr {
+  align-self: center;
+  width: 80%;
+  margin-bottom: 15px;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content .product-left-category-item-wrap {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  height: 100%;
+  max-height: 225px;
+  width: 100%;
+  overflow: scroll;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content .product-left-category-item-wrap .product-left-category-item-item {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content .product-left-category-item-wrap .product-left-category-item-item .product-left-category-item-item-input {
+  margin-right: 10px;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content .product-left-category-item-wrap .product-left-category-item-item .product-left-category-item-item-input .checkbox_item {
+  display: flex;
+  position: relative;
+  cursor: pointer;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content .product-left-category-item-wrap .product-left-category-item-item .product-left-category-item-item-input .checkbox_item .checkbox_item_icon {
+  position: absolute;
+  left: -30px;
+  top: 3px;
+  font-size: 15px;
+  transition: all 0.4s;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content .product-left-category-item-wrap .product-left-category-item-item .product-left-category-item-item-input .checkbox_item::before {
+  position: relative;
+  display: block;
+  content: "";
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  min-width: 20px;
+  height: 20px;
+  float: left;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content .product-left-category-item-wrap .product-left-category-item-item .product-left-category-item-item-input .checkbox_item input {
+  position: absolute;
+  display: none;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content .product-left-category-item-wrap .product-left-category-item-item .product-left-category-item-item-input .checkbox_item input:checked ~ .checkbox_item_icon {
+  display: block;
+  left: 4px;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content .product-left-category-item-wrap .product-left-category-item-item .product-left-category-item-item-input .checkbox_item .product-left-category-item-item-color {
+  margin-right: 5px;
+  height: 100%;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content .product-left-category-item-wrap .product-left-category-item-item .product-left-category-item-item-input .checkbox_item .product-left-category-item-item-color .product-left-category-item-item-color-item {
+  padding-left: 5px;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content .product-left-category-item-wrap .product-left-category-item-item .product-left-category-item-item-input .checkbox_item .product-left-category-item-item-color span {
+  display: inline-block;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content .product-left-category-item-wrap .product-left-category-item-item .product-left-category-item-item-input .checkbox_item span {
+  font-size: 16px;
+  /* text-align: center; */
+}
+
+.product-left-category .product-left-category-item .product-left-category-item-content .product-left-category-item-wrap .product-left-category-item-item:last-child {
+  margin-bottom: 0;
+}
+
+.product-right-content {
+  z-index: 1;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap {
+  height: 100%;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid transparent;
+  box-shadow: 2px 2px 8px #ccc;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  flex-direction: column;
+  max-height: 600px;
+  max-width: 280px;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-slide {
+  display: flex;
+  max-width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-slide .product-item-img {
+  max-width: 100%;
+  height: auto;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-slide .product-item-img:hover {
+  cursor: pointer;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-description {
+  width: 100%;
+  padding: 10px 10px;
+  z-index: 60;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-description span {
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-description span:last-child {
+  padding-bottom: 0;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options {
+  padding: 10px 10px;
+  border: 2px solid #fff;
+  box-shadow: 2px 2px 8px #ccc;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  background-color: #fff;
+  width: 100%;
+  z-index: 50;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .product-item-options-colors {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 12px;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .product-item-options-colors span {
+  border: 1px solid transparent;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .product-item-options-colors span button {
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .product-item-options-sizes {
+  height: 100%;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .product-item-options-sizes .product-item-slide {
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .product-item-options-sizes .product-item-options-sizes-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 40px;
+  line-height: 30px;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .product-item-options-sizes .product-item-options-sizes-item span {
+  font-size: 16px;
+  padding: 1px 13px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  color: #312b2b;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .product-item-options-button {
+  width: 100%;
+  height: 100%;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .product-item-options-button span {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 12px;
+  -webkit-user-select: text;
+     -moz-user-select: text;
+          user-select: text;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .product-item-options-button button {
+  position: relative;
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  outline: none;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  text-align: center;
+  font-size: 16px;
+  width: 100%;
+  height: 40px;
+  cursor: pointer;
+  justify-content: center;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .product-item-options-button button:hover:last-child {
+  border: 1px solid rgb(196, 183, 233);
+  background-color: rgb(196, 183, 233);
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .product-item-options-button button:hover .fa-cart-shopping {
+  left: 45%;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .product-item-options-button button:hover p {
+  left: 100%;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options .fa-cart-shopping {
+  position: absolute;
+  left: -50%;
+  color: rgb(77, 68, 68);
+  transition: all 0.5s ease;
+  font-size: 20px;
+}
+
+.product-right-content .product-right-content-wrap .product-wrap .product-item .product-item-options p {
+  position: absolute;
+  left: 0;
+  color: #000;
+  width: 100%;
+  transition: all 0.5s ease;
+}
+
+img {
+  max-width: 100%;
+}
+
+.product-item span {
+  color: #000;
+}
+
+.product-item-options {
+  display: none;
+}
+
+.product-item:hover .product-item-options {
+  display: block;
 }/*# sourceMappingURL=main.css.map */
