--- a/view/cart.html
+++ b/view/cart.html
@@ -61,7 +61,7 @@
                                 </li>
                                 <li class="menu-list">
                                     <div class="menu-header dropdown">
-                                        <a href="" class="nav-link">
+                                        <a href="/view/product.html" class="nav-link">
                                             Danh mục
                                         </a>
                                         <span>
