--- a/view/product.html
+++ b/view/product.html
@@ -115,11 +115,11 @@
             <div class="search-wrapper">
                 <div class="container">
                     <form action="" class=" search-form d-flex align-items-center">
-                        <button type="submit" class="search-submit bg-transparent pl-0 text-start">
+                        <button onclick="" type="submit" class="search-submit bg-transparent pl-0 text-start">
                             <i class="icon fa-solid fa-magnifying-glass"></i>
                         </button>
                         <div class="search-ipunt mr-4">
-                            <input type="text" name="seacrh" placeholder="Search your products...">
+                            <input type="text" id="searchKeyword" name="seacrh" placeholder="Search your products...">
                         </div>
                         <div class="search-close">
                             <i class="icon fa-solid fa-xmark"></i>
@@ -140,12 +140,12 @@
                             </div>
                             <div class="product-left-category-item-content">
                                 <hr>
-                                <div class="product-left-category-item-wrap">
+                                <div class="product-left-category-item-wrap" id="category-list">
 
-                                    <div class="product-left-category-item-item">
+                                    <!-- <div class="product-left-category-item-item">
                                         <div class="product-left-category-item-item-input">
                                             <label class="checkbox_item">
-                                                <input type="checkbox" id="0" class="kickthuoc">
+                                                <input type="checkbox" id="adidas" class="category">
                                                 <i class="fa-solid fa-check checkbox_item_icon"></i>
                                                 <div class="product-left-category-item-item-color"></div>
                                                 <span>Giày Adidas</span>
@@ -155,7 +155,7 @@
                                     <div class="product-left-category-item-item">
                                         <div class="product-left-category-item-item-input">
                                             <label class="checkbox_item">
-                                                <input type="checkbox" id="1" class="kickthuoc">
+                                                <input type="checkbox" id="nike" class="category">
                                                 <i class="fa-solid fa-check checkbox_item_icon"></i>
                                                 <div class="product-left-category-item-item-color"></div>
                                                 <span>Giày Nike</span>
@@ -165,43 +165,13 @@
                                     <div class="product-left-category-item-item">
                                         <div class="product-left-category-item-item-input">
                                             <label class="checkbox_item">
-                                                <input type="checkbox" id="1" class="kickthuoc">
+                                                <input type="checkbox" id="van" class="category">
                                                 <i class="fa-solid fa-check checkbox_item_icon"></i>
                                                 <div class="product-left-category-item-item-color"></div>
-                                                <span>Giày Van</span>
+                                                <span>Giày Van-Converse</span>
                                             </label>
                                         </div>
-                                    </div>
-                                    <div class="product-left-category-item-item">
-                                        <div class="product-left-category-item-item-input">
-                                            <label class="checkbox_item">
-                                                <input type="checkbox" id="1" class="kickthuoc">
-                                                <i class="fa-solid fa-check checkbox_item_icon"></i>
-                                                <div class="product-left-category-item-item-color"></div>
-                                                <span>Giày Converse</span>
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <div class="product-left-category-item-item">
-                                        <div class="product-left-category-item-item-input">
-                                            <label class="checkbox_item">
-                                                <input type="checkbox" id="1" class="kickthuoc">
-                                                <i class="fa-solid fa-check checkbox_item_icon"></i>
-                                                <div class="product-left-category-item-item-color"></div>
-                                                <span>Giày Converse</span>
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <div class="product-left-category-item-item">
-                                        <div class="product-left-category-item-item-input">
-                                            <label class="checkbox_item">
-                                                <input type="checkbox" id="1" class="kickthuoc">
-                                                <i class="fa-solid fa-check checkbox_item_icon"></i>
-                                                <div class="product-left-category-item-item-color"></div>
-                                                <span>Giày Converse</span>
-                                            </label>
-                                        </div>
-                                    </div>
+                                    </div> -->
 
                                 </div>
 
@@ -300,46 +270,6 @@
                                             </label>
                                         </div>
                                     </div>
-                                    <div class="product-left-category-item-item">
-                                        <div class="product-left-category-item-item-input">
-                                            <label class="checkbox_item">
-                                                <input type="checkbox" id="6" class="kickthuoc">
-                                                <i class="fa-solid fa-check checkbox_item_icon"></i>
-                                                <div class="product-left-category-item-item-color"></div>
-                                                <span>XXS</span>
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <div class="product-left-category-item-item">
-                                        <div class="product-left-category-item-item-input">
-                                            <label class="checkbox_item">
-                                                <input type="checkbox" id="7" class="kickthuoc">
-                                                <i class="fa-solid fa-check checkbox_item_icon"></i>
-                                                <div class="product-left-category-item-item-color"></div>
-                                                <span>S</span>
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <div class="product-left-category-item-item">
-                                        <div class="product-left-category-item-item-input">
-                                            <label class="checkbox_item">
-                                                <input type="checkbox" id="8" class="kickthuoc">
-                                                <i class="fa-solid fa-check checkbox_item_icon"></i>
-                                                <div class="product-left-category-item-item-color"></div>
-                                                <span>M</span>
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <div class="product-left-category-item-item">
-                                        <div class="product-left-category-item-item-input">
-                                            <label class="checkbox_item">
-                                                <input type="checkbox" id="9" class="kickthuoc">
-                                                <i class="fa-solid fa-check checkbox_item_icon"></i>
-                                                <div class="product-left-category-item-item-color"></div>
-                                                <span>R</span>
-                                            </label>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -353,30 +283,40 @@
                                     <div class="product-left-category-item-item">
                                         <div class="product-left-category-item-item-input">
                                             <label class="checkbox_item">
-                                                <input type="checkbox" id="0" class="gia">
+                                                <input type="checkbox" class="gia">
                                                 <i class="fa-solid fa-check checkbox_item_icon"></i>
                                                 <div class="product-left-category-item-item-color"></div>
-                                                <span>Dưới 1200000 VND</span>
+                                                <span>Dưới $900</span>
                                             </label>
                                         </div>
                                     </div>
                                     <div class="product-left-category-item-item">
                                         <div class="product-left-category-item-item-input">
                                             <label class="checkbox_item">
-                                                <input type="checkbox" id="1" class="gia">
+                                                <input type="checkbox" class="gia">
                                                 <i class="fa-solid fa-check checkbox_item_icon"></i>
                                                 <div class="product-left-category-item-item-color"></div>
-                                                <span>Dưới 1500000 VND</span>
+                                                <span>Dưới $700</span>
                                             </label>
                                         </div>
                                     </div>
                                     <div class="product-left-category-item-item">
                                         <div class="product-left-category-item-item-input">
                                             <label class="checkbox_item">
-                                                <input type="checkbox" id="2" class="gia">
+                                                <input type="checkbox" class="gia">
                                                 <i class="fa-solid fa-check checkbox_item_icon"></i>
                                                 <div class="product-left-category-item-item-color"></div>
-                                                <span>Dưới 2000000 VND</span>
+                                                <span>Dưới $500</span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="product-left-category-item-item">
+                                        <div class="product-left-category-item-item-input">
+                                            <label class="checkbox_item">
+                                                <input type="checkbox" class="gia">
+                                                <i class="fa-solid fa-check checkbox_item_icon"></i>
+                                                <div class="product-left-category-item-item-color"></div>
+                                                <span>Dưới $300</span>
                                             </label>
                                         </div>
                                     </div>
@@ -386,17 +326,7 @@
                                                 <input type="checkbox" id="3" class="gia">
                                                 <i class="fa-solid fa-check checkbox_item_icon"></i>
                                                 <div class="product-left-category-item-item-color"></div>
-                                                <span>Dưới 2500000 VND</span>
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <div class="product-left-category-item-item">
-                                        <div class="product-left-category-item-item-input">
-                                            <label class="checkbox_item">
-                                                <input type="checkbox" id="4" class="gia">
-                                                <i class="fa-solid fa-check checkbox_item_icon"></i>
-                                                <div class="product-left-category-item-item-color"></div>
-                                                <span>Trên 2500000 VND</span>
+                                                <span>Trên $100</span>
                                             </label>
                                         </div>
                                     </div>
@@ -585,7 +515,8 @@
     <script src="/model/Shoes.js"></script>
     <script src="/model/CartItem.js"></script>
     <!-- <script src="/controller/card.js"></script> -->
-    <script src="/controller/main.js"></script>
+    
+    <script  src="/controller/main.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -602,3 +533,104 @@
 </body>
 
 </html>
+<!-- <script>
+    var productList = []; // Biến global lưu danh sách sản phẩm
+
+    function layDuLieu() {
+        axios({
+            method: 'get',
+            url: 'https://shop.cyberlearn.vn/api/Product'
+        })
+            .then(function (result) {
+                productList = result.data.content;
+                console.log(productList)
+                hienThiSanPham(productList);
+
+            })
+            .catch(function (error) {
+                console.log(error);
+            });
+    }
+
+    // Hiển thị sản phẩm
+    function hienThiSanPham(data) {
+        var sortOptions = document.getElementById('sortOptions');
+        var sortBy = sortOptions.value;
+
+        if (sortBy === 'Giá (Từ cao đến thấp)') {
+            data.sort(function (a, b) {
+                return b.price - a.price;
+            });
+        } else if (sortBy === 'Hàng (Từ thấp đến cao)') {
+            data.sort(function (a, b) {
+                return a.price - b.price;
+            });
+        }
+        var shoesList = document.getElementById('wrapper-list-products');
+
+        // Xóa nội dung trong phần tử shoesList trước khi hiển thị
+        shoesList.innerHTML = '';
+
+        // Duyệt qua từng sản phẩm và tạo HTML tương ứng
+        data.forEach(function (product) {
+            var productHTML = `
+      <div class="product-wrap col-lg-4 m-12 c-12">
+          <a href="">
+              <div class="product-item">
+                  <div class="swiper swiper-slide">
+                      <div class="swiper-wrapper">
+                          <div class="swiper-slide product-item-img">
+                              <img src="${product.image}" />
+                          </div>
+                      </div>
+                  </div>
+                  <div class="product-item-description">
+                      <span class="card-title">${product.name}</span>
+                      <span class="text-muted">${product.price}$</span>
+                  </div>
+                  <div class="product-item-options">  
+                      <div class="product-item-options-button row">
+                          <div class="col-lg-8 col1">
+                          <button><a href="http://127.0.0.1:5500/view/detail.html?id=${product.id}"> Xem sản phẩm</a></button>
+                          </div>
+                          <div class="col-lg-4 col1">
+                              <button onclick="addToCart(event)"><i class="fa-solid fa-cart-plus"></i></button>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </a>
+      </div>
+      `;
+
+            // Thêm sản phẩm vào phần tử shoesList
+            shoesList.innerHTML += productHTML;
+        });
+    }
+    document.addEventListener('DOMContentLoaded', function () {
+        layDuLieu();
+        getAllCategory();
+    });
+
+    // Tìm kiếm sản phẩm
+    function searchProducts(keyword) {
+        // Chuyển đổi từ khóa tìm kiếm thành chữ thường
+        var lowerCaseKeyword = keyword.toLowerCase();
+
+        // Lọc danh sách sản phẩm theo từ khóa tìm kiếm
+        var filteredProducts = productList.filter(function (product) {
+            var lowerCaseName = product.name.toLowerCase();
+            return lowerCaseName.includes(lowerCaseKeyword);
+        });
+
+        // Hiển thị sản phẩm đã lọc
+        hienThiSanPham(filteredProducts);
+    }
+
+    document.querySelector('.search-form').addEventListener('submit', function (event) {
+        event.preventDefault();
+
+        var keyword = document.getElementById('searchKeyword').value.trim();
+        searchProducts(keyword);
+    });
+</script> -->
